--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,22 +15,23 @@
         android:layout_height="wrap_content"
         android:text="Sunny Side Up" />
 
-    <Button
-        android:id="@+id/btnAll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Display All" />
-
-    <Button
-        android:id="@+id/btnAverage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Display Average" />
 
     <TextView
-        android:id="@+id/tvContent"
+        android:id="@+id/tvDays"
         android:layout_width="match_parent"
-        android:layout_height="235dp"
+        android:layout_height="32dp"
+        android:text="" />
+
+    <TextView
+        android:id="@+id/tvAverage"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:text="" />
+
+    <ListView
+        android:id="@+id/lvContent"
+        android:layout_width="match_parent"
+        android:layout_height="520dp"
         android:text="" />
 
     <Button
